fix: fix 100vw overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   line-height: 1.5;
   font-weight: 400;
   font-family: "Azeret Mono", monospace;
-
+  color: rgba(255, 255, 255, 0.87);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -10,12 +10,14 @@
 }
 
 html {
+  overflow-x: hidden;
   overscroll-behavior-y: none;
   scroll-behavior: smooth;
   background-color: #080808;
 }
 
 body {
+  overflow-x: hidden;
   margin: 0;
   display: flex;
   place-items: center;
